# pytest-axe-playwright-snapshot

./: CONTRIBUTING.md  pyproject.toml  pytest_axe_playwright_snapshot.py
.github/: FUNDING.yml
tests/: test_snapshot.py  test_snapshot_to_dict.py
